test/fail/issue-3585/Object.mo
module  {
  public let x = object { var v = 1 }; // rejected as non-static
}
